# product_release_control

./: .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
alembic_service/: Dockerfile  alembic.ini  config.py
alembic_service/alembic/: env.py
alembic_service/alembic/versions/: 180688a648f6_create_shifttasks_batches_products_.py  c627d8569c70_change_batches_and_workcenters.py  fa4d013c7da3_upgrade_models.py
src/backend/app/: main.py
src/backend/core/: dependencies.py
src/backend/core/configs/: Postgres.py  config.py
src/backend/core/crud/: BaseRepository.py  BatchesRepo.py  CrudDB.py  ProductsRepo.py  ShiftTasksRepo.py  WorkCentersRepo.py  __init__.py
src/backend/core/db/: Database.py
src/backend/core/env-files/: .env.example
src/backend/core/exceptions/: handler.py
src/backend/core/logging/: log_decorator.py  logger.py
src/backend/core/models/: Batches.py  Products.py  ShiftTasks.py  WorkCenters.py  __init__.py
src/backend/core/utils/utils_work_center/: utils.py
src/backend/product_controler/: Dockerfile
src/backend/product_controler/app/: router.py
src/backend/product_controler/exceptions/: exceptions.py
src/backend/product_controler/schemas/: schemas.py
src/backend/product_controler/services/: ProductControllerService.py  __init__.py
tests/integration/: conftest.py  test_product_contrloller_service.py
tests/unit/: conftest.py  test_product_contrloller_service.py
